syntax = "proto3";

package account;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/account;account";

// 账户服务
service AccountService {
  // 创建账户
  rpc CreateAccount(CreateAccountRequest) returns (AccountResponse);
  // 获取账户信息
  rpc GetAccount(GetAccountRequest) returns (AccountResponse);
  // 更新账户信息
  rpc UpdateAccount(UpdateAccountRequest) returns (AccountResponse);
  // 获取账户余额
  rpc GetBalance(GetBalanceRequest) returns (BalanceResponse);
  // 充值
  rpc Deposit(DepositRequest) returns (TransactionResponse);
  // 提现
  rpc Withdraw(WithdrawRequest) returns (TransactionResponse);
  // 获取交易历史
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (TransactionHistoryResponse);
}

// 创建账户请求
message CreateAccountRequest {
  string user_id = 1;
  string account_type = 2;
  string currency = 3;
}

// 账户响应
message AccountResponse {
  string account_id = 1;
  string user_id = 2;
  string account_type = 3;
  string currency = 4;
  string balance = 5;
  string available_balance = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// 获取账户请求
message GetAccountRequest {
  string account_id = 1;
  string user_id = 2;
}

// 更新账户请求
message UpdateAccountRequest {
  string account_id = 1;
  string user_id = 2;
  map<string, string> updates = 3;
}

// 获取余额请求
message GetBalanceRequest {
  string account_id = 1;
  string user_id = 2;
}

// 余额响应
message BalanceResponse {
  string account_id = 1;
  string balance = 2;
  string available_balance = 3;
  string frozen_balance = 4;
  int64 timestamp = 5;
}

// 充值请求
message DepositRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
}

// 提现请求
message WithdrawRequest {
  string account_id = 1;
  string user_id = 2;
  string amount = 3;
  string currency = 4;
  string address = 5;
}

// 交易响应
message TransactionResponse {
  string transaction_id = 1;
  string account_id = 2;
  string type = 3;
  string amount = 4;
  string status = 5;
  int64 timestamp = 6;
}

// 获取交易历史请求
message GetTransactionHistoryRequest {
  string account_id = 1;
  string user_id = 2;
  int32 limit = 3;
}

// 交易记录
message Transaction {
  string transaction_id = 1;
  string type = 2;
  string amount = 3;
  string status = 4;
  int64 timestamp = 5;
}

// 交易历史响应
message TransactionHistoryResponse {
  repeated Transaction transactions = 1;
}
